--- a/staticcheck.conf
+++ b/staticcheck.conf
@@ -1,37 +1,39 @@
+# staticcheck.conf (TOML)
+
 checks = ["all"]
 
-# Kullanılmayan semboller (gelecek API için tutulan helper'lar)
-ignore "U1000" {
-  files = [
-    "api/http_server.go",            # geçici değişkenler
-    "blockchain/transaction.go",     # encodeSig/decodeSig/pubKeyToECDSA
-    "miner/assemble_block.go",       # assembleCoinbaseAndMetadata
-  ]
-  justification = "Kept for future API/back-compat"
-}
+# --- UNUSED / Geleceğe dönük helperlar ---
+[[ignore]]
+check = "U1000"                         # tek bir kural kodu veya regex
+files = [
+  "api/http_server.go",
+  "blockchain/transaction.go",
+  "miner/assemble_block.go",
+]
+reason = "Kept for future API/back-compat"
 
-# Printf yanlış kullanımı - UI mesajları (davranış değişimi istemiyoruz)
-ignore "SA1006" {
-  files = [
-    "ui/send_ui.go",
-  ]
-  justification = "UI prints kept as-is"
-}
+# --- UI Printf format uyarıları ---
+[[ignore]]
+check = "SA1006"
+files = [
+  "ui/send_ui.go",
+]
+reason = "UI prints kept as-is"
 
-# Eski/uyumluluk API'leri - Fyne/deprecated, RIPEMD-160 (Bitcoin uyumu)
-ignore "SA1019" {
-  files = [
-    "miner/difficulty.go",  # theme.PrimaryColor
-    "ui/settings_ui.go",    # theme.DarkTheme/LightTheme
-    "utils/hash.go",        # ripemd160 for address compatibility
-  ]
-  justification = "Legacy compatibility kept"
-}
+# --- Eski/uyumluluk API'leri ---
+[[ignore]]
+check = "SA1019"
+files = [
+  "miner/difficulty.go",
+  "ui/settings_ui.go",
+  "utils/hash.go",
+]
+reason = "Legacy compatibility kept"
 
-# Gereksiz nil kontrolü - stil tercihi, davranış aynı
-ignore "S1031" {
-  files = [
-    "blockchain/nft.go",
-  ]
-  justification = "Readable explicit nil-check kept"
-}
+# --- Stil tercihi: explicit nil-check ---
+[[ignore]]
+check = "S1031"
+files = [
+  "blockchain/nft.go",
+]
+reason = "Readable explicit nil-check kept"
