feat: add missing folders (qc-desktop, consolefx, cmd/wallet & gui) and release scripts/assets; keep binaries out; tighten .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,12 @@ bonus_store.json
 # OS
 Thumbs.db
 .DS_Store
+# --- keep repo clean: don't commit built artifacts from release ---
+/release/*.exe
+/release/*.dll
+/release/*.pdb
+/release/*.db
+/release/*.db*
+/release/*.dat
+/release/qc_blockchain.db*
+/release/*.log
